FramebufferRenderbuffer() generates INVALID_OP if renderbuffer has never been bound.

BUG=736916
TEST=gpu_unittests,webgl_conformance
R=kbr@chromium.org,kainino@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2959893002
Cr-Commit-Position: refs/heads/master@{#482545}

Former-commit-id: 58289583dc8e3a0ebf327e5410cdabf344e9b816